package com.ianlor.wowdelivery

object TestTags {

    const val DELIVERIES_LIST = "DELIVERIES_LIST"
    const val DELIVERIES_LOADING = "DELIVERIES_LOADING"
    const val DELIVERY_DETAIL_TOPBAR = "DELIVERY_DETAIL_TOPBAR"
    const val DELIVERY_DETAIL_BODY = "DELIVERY_DETAIL_BODY"
    const val DELIVERY_DETAIL_EMPTY = "DELIVERY_DETAIL_EMPTY"
}