<resources>
    <string name="app_name">Wow Delivery</string>
</resources>